@@ -21,11 +21,10 @@ class PatientsController < ApplicationController
 
     patient_scope = patient_scope.with_priority_message(params[:priority_message]) unless params[:priority_message].blank?
 
-    @order = Patient.column_names.collect{|column_name| "patients.#{column_name}"}.include?(params[:order].to_s.split(' ').first) ? params[:order] : "patients.id"
-
+    @order = scrub_order(Patient, params[:order], 'patients.id')
     @order = "priority DESC, " + @order if params[:priority_only] == '1'
-
     patient_scope = patient_scope.order(@order)
+
     @patient_count = patient_scope.count
 
     if params[:autocomplete] == 'true'
