@@ -10,6 +10,7 @@
 
 * Refactoring
   * Mass-assignment attr_accessible and params slicing implemented to leverage Rails 3.2.6 configuration defaults
+  * Consistent sorting and display of model counts used across all objects, (calls, clinics, doctors, mailings, users, etc)
 
 * Bug Fix
   * Sticky requests from Task Tracker now correctly include stickies for Phone Calls and Visits that are unnassigned
